[gd_scene load_steps=9 format=3 uid="uid://dpufs3fxsxh4a"]

[ext_resource type="Script" path="res://ui/board_ui.gd" id="1_883fb"]
[ext_resource type="Theme" uid="uid://6i6l70xtnywh" path="res://ui/theme.tres" id="2_48epx"]
[ext_resource type="Script" path="res://ui/BuildMenu.gd" id="3_x7hxt"]
[ext_resource type="FontFile" uid="uid://dq8eis0yythi0" path="res://fonts/RobotoCondensed-Bold.ttf" id="4_5kyyh"]
[ext_resource type="Script" path="res://ui/GemInfo.gd" id="4_vuwf8"]
[ext_resource type="Script" path="res://ui/RockMenu.gd" id="5_e8wht"]
[ext_resource type="Script" path="res://ui/StatsPanel.gd" id="7_vpxac"]

[sub_resource type="LabelSettings" id="LabelSettings_n3b1d"]
font = ExtResource("4_5kyyh")
font_size = 20
font_color = Color(0.196078, 1, 0.262745, 1)

[node name="board_ui" type="CanvasLayer"]
script = ExtResource("1_883fb")

[node name="FpsLabel" type="Label" parent="."]
offset_left = 16.0
offset_top = 41.0
offset_right = 1936.0
offset_bottom = 67.0
text = "Fps
"

[node name="WaveLabel" type="Label" parent="."]
offset_left = 13.0
offset_top = 14.0
offset_right = 1933.0
offset_bottom = 66.0
text = "Wave

"

[node name="MarginContainer" type="VBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -209.0
offset_top = -174.0
offset_right = 210.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_48epx")

[node name="GemInfo" type="Panel" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
script = ExtResource("4_vuwf8")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/GemInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/GemInfo/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/GemInfo/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/GemInfo/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Gem"

[node name="Level" type="Label" parent="MarginContainer/GemInfo/MarginContainer/VBoxContainer/HBoxContainer"]
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 10
text = "Lv.1
"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/GemInfo/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 70
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/GemInfo/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="AtkLabel" type="Label" parent="MarginContainer/GemInfo/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "ATK:
"

[node name="AtkValue" type="Label" parent="MarginContainer/GemInfo/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "ATK
"
label_settings = SubResource("LabelSettings_n3b1d")

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/GemInfo/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="SpdLabel" type="Label" parent="MarginContainer/GemInfo/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "SPD:
"

[node name="SpdValue" type="Label" parent="MarginContainer/GemInfo/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "SPD
"
label_settings = SubResource("LabelSettings_n3b1d")

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/GemInfo/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="RngLabel" type="Label" parent="MarginContainer/GemInfo/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer3"]
layout_mode = 2
text = "RNG:"

[node name="RngValue" type="Label" parent="MarginContainer/GemInfo/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer3"]
layout_mode = 2
text = "RNG
"
label_settings = SubResource("LabelSettings_n3b1d")

[node name="BuildMenu" type="Panel" parent="MarginContainer" groups=["BuildMenu"]]
visible = false
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 6
script = ExtResource("3_x7hxt")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/BuildMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Keep" type="Button" parent="MarginContainer/BuildMenu/HBoxContainer"]
custom_minimum_size = Vector2(64, 40)
layout_mode = 2
tooltip_text = "Keep the gem and start next wave"
text = "Keep"

[node name="Downgrade" type="Button" parent="MarginContainer/BuildMenu/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
tooltip_text = "Keep the gem and start next wave"
disabled = true
text = "Down
"

[node name="Fusion2" type="Button" parent="MarginContainer/BuildMenu/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
tooltip_text = "Keep the gem and start next wave"
disabled = true
text = "Fus2
"

[node name="Fusion4" type="Button" parent="MarginContainer/BuildMenu/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
tooltip_text = "Keep the gem and start next wave"
disabled = true
text = "Fus4
"

[node name="Combine" type="Button" parent="MarginContainer/BuildMenu/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
tooltip_text = "Keep the gem and start next wave"
disabled = true
text = "Comb
"

[node name="Reroll" type="Button" parent="MarginContainer/BuildMenu/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
tooltip_text = "Keep the gem and start next wave"
disabled = true
text = "Roll
"

[node name="RockMenu" type="Panel" parent="MarginContainer" groups=["BuildMenu"]]
visible = false
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 6
script = ExtResource("5_e8wht")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/RockMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Reroll" type="Button" parent="MarginContainer/RockMenu/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
tooltip_text = "Keep the gem and start next wave"
disabled = true
text = "Roll
"

[node name="StatsPanel" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -291.0
offset_bottom = 321.0
grow_horizontal = 0
script = ExtResource("7_vpxac")

[node name="MarginContainer2" type="MarginContainer" parent="StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GemTable" type="GridContainer" parent="StatsPanel/MarginContainer2"]
layout_mode = 2
columns = 2

[node name="GemName" type="Label" parent="StatsPanel/MarginContainer2/GemTable"]
layout_mode = 2
text = "Gem
"

[node name="GemValue" type="Label" parent="StatsPanel/MarginContainer2/GemTable"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
text = "0
"
label_settings = SubResource("LabelSettings_n3b1d")
horizontal_alignment = 2

[connection signal="pressed" from="MarginContainer/BuildMenu/HBoxContainer/Keep" to="MarginContainer/BuildMenu" method="_on_keep_pressed"]
[connection signal="pressed" from="MarginContainer/BuildMenu/HBoxContainer/Downgrade" to="MarginContainer/BuildMenu" method="_on_downgrade_pressed"]
[connection signal="pressed" from="MarginContainer/BuildMenu/HBoxContainer/Fusion2" to="MarginContainer/BuildMenu" method="_on_fusion_2_pressed"]
[connection signal="pressed" from="MarginContainer/BuildMenu/HBoxContainer/Fusion4" to="MarginContainer/BuildMenu" method="_on_fusion_4_pressed"]
[connection signal="pressed" from="MarginContainer/BuildMenu/HBoxContainer/Combine" to="MarginContainer/BuildMenu" method="_on_combine_pressed"]
[connection signal="pressed" from="MarginContainer/BuildMenu/HBoxContainer/Reroll" to="MarginContainer/BuildMenu" method="_on_reroll_pressed"]
[connection signal="pressed" from="MarginContainer/RockMenu/HBoxContainer/Reroll" to="MarginContainer/RockMenu" method="_on_reroll_pressed"]
